--- a/musicApp2/src/main/resources/application.properties
+++ b/musicApp2/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/musicapp
 spring.datasource.username=root
-spring.datasource.password=Inginer2023*
+spring.datasource.password=3ursuleti188pufosi
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
