--- a/musicApp2/src/main/resources/application.properties
+++ b/musicApp2/src/main/resources/application.properties
@@ -1,19 +1,11 @@
 server.port=8080
 
-#spring.datasource.url=jdbc:h2:mem:musicapp
-##spring.datasource.url=jdbc:h2:tcp://localhost:8080/musicapp
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=user
-#spring.datasource.password=admin
-
-spring.datasource.url=jdbc:mysql://localhost:3306/musicapp
+spring.datasource.url=jdbc:mysql://localhost:3306/musicapp2
 spring.datasource.username=root
 spring.datasource.password=Inginer2023*
 
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
 #spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#
-#spring.h2.console.enabled=true
-# default path: h2-console
-#spring.h2.console.path=/h2
+
