--- a/musicApp2/src/main/resources/application.properties
+++ b/musicApp2/src/main/resources/application.properties
@@ -2,10 +2,8 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/musicapp2
 spring.datasource.username=root
-spring.datasource.password=3ursuleti188pufosi
+spring.datasource.password=Inginer2023*
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.jpa.show-sql=true
 
